# incident-triage

./: README.md  pyproject.toml
knowledge/: incident_sample_sev1.txt  incident_sample_sev2.txt  incident_sample_sev3.txt  kickoff_payload_sample.json
src/service_ops_incident_triage/: crew.py  main.py
src/service_ops_incident_triage/config/: agents.yaml  tasks.yaml
