[project]
name = "service_ops_incident_triage"
version = "0.1.0"
description = "service_ops_incident_triage using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.15.0",
    "exa-py",
]

[project.scripts]
service_ops_incident_triage = "service_ops_incident_triage.main:run"
run_crew = "service_ops_incident_triage.main:run"
train = "service_ops_incident_triage.main:train"
replay = "service_ops_incident_triage.main:replay"
test = "service_ops_incident_triage.main:test"
run_with_trigger = "service_ops_incident_triage.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
